<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".CadastroPessoaActivity">

    <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/ImgCadastro"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:background="@mipmap/ic_pessoa"
            android:layout_marginLeft="125dp" />

        <TextView
            android:id="@+id/txDocumentacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/documenta_o_pessoal"
            android:layout_below="@+id/ImgCadastro"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="5dp" />

        <TextView
            android:id="@+id/txNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:layout_below="@+id/txDocumentacao"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txDocumentacao"
            android:layout_toRightOf="@+id/txNome"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txDatanasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_de_nascimento"
            android:layout_below="@+id/txNome"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtDatanasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txNome"
            android:layout_toRightOf="@+id/txDatanasc"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txCns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cns"
            android:layout_below="@+id/txDatanasc"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtCns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txDatanasc"
            android:layout_toRightOf="@+id/txCns"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rg"
            android:layout_below="@+id/txCns"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txCns"
            android:layout_toRightOf="@+id/txRg"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpf"
            android:layout_below="@+id/txRg"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txRg"
            android:layout_toRightOf="@+id/txRg"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txMae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_da_m_e"
            android:layout_below="@+id/txCpf"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtMae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txCpf"
            android:layout_toRightOf="@+id/txMae"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txPai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_pai"
            android:layout_below="@+id/txMae"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtPai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txMae"
            android:layout_toRightOf="@+id/txPai"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endere_o"
            android:layout_below="@+id/txPai"
            android:textSize="20sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/txLogradouro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logradouro"
            android:layout_below="@+id/txEndereco"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtLogradouro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txEndereco"
            android:layout_toRightOf="@+id/txLogradouro"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n"
            android:layout_below="@+id/txEndereco"
            android:layout_toRightOf="@+id/edtLogradouro"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txEndereco"
            android:layout_toRightOf="@+id/txNumero"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txComplemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complemento"
            android:layout_below="@+id/txLogradouro"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtComplemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtNumero"
            android:layout_toRightOf="@+id/txComplemento"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txBairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bairro"
            android:layout_below="@+id/txNumero"
            android:layout_toRightOf="@+id/edtComplemento"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtBairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtNumero"
            android:layout_toRightOf="@+id/txBairro"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contato"
            android:layout_below="@+id/txComplemento"
            android:textSize="20sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/txTelefone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone_1"
            android:layout_below="@+id/txContato"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtTelefone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txContato"
            android:layout_toRightOf="@+id/txTelefone1"
            android:textSize="20sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/txTelefone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone_2"
            android:layout_below="@+id/txContato"
            android:layout_toRightOf="@+id/edtTelefone1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtTelefone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txContato"
            android:layout_toRightOf="@+id/txTelefone2"
            android:textSize="20sp"
            android:padding="3dp" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:layout_below="@id/txTelefone1"
            android:padding="20dp" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_marginTop="20dp"
            android:layout_below="@id/txTelefone1"
            android:layout_toRightOf="@id/btnSalvar"
            android:padding="20dp" />

    </RelativeLayout>
</ScrollView>